syntax = "proto3";

package pi2schema.kms;

// Internal commands
message Commands {
  oneof command {
    RegisterCryptographicMaterials register = 1;
    ForgetSubject forget = 2;
  }
}

message RegisterCryptographicMaterials {
  SubjectCryptographicMaterial material = 1;
  // ...
}

message ForgetSubject {
  Subject subject = 1;
  // ...
}



message Events {
  oneof event {
    CryptographicMaterialsWasRegistered registered = 1;
    CryptographicMaterialsWasAccessed accessed = 2;
    CryptographicMaterialsWasForgotten forgotten = 3;
  }
}

message CryptographicMaterialsWasRegistered {/* ... */}
message CryptographicMaterialsWasAccessed {/* ... */}
message CryptographicMaterialsWasForgotten {/* ... */}


// Types

message Subject {
  string id = 1;
}


message SubjectCryptographicMaterial {

  string id = 1;
  Subject subject = 2;
  bytes symmetricKey = 3;
  string algorithm = 4;

  // topic / context?

}

message SubjectCryptographicMaterialAggregate {

  repeated SubjectCryptographicMaterial materials = 1;

}

